// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should corectly render expense summary with multiple expense 1`] = `
<div>
  <h1>
    Viewing 
    23
     
    expenses
     totalling 
    $2,345,676,533.45
     
  </h1>
</div>
`;

exports[`should corectly render expense summary with one expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $2.35
     
  </h1>
</div>
`;
